--- a/jenkins-sy/Dockerfile
+++ b/jenkins-sy/Dockerfile
@@ -3,24 +3,33 @@
 # run a http server at port 8999
 # require a jenkins application to support our server
 
-FROM 192.168.1.11:5000/ddcos-sagent:v0.0.67
+FROM centos:latest
 
 MAINTAINER captain "captain@cmaster.co"
 
-#RUN yum install -y deb
-RUN pip install jinja2 requests python-jenkins jenkinsapi bottle mysql-connector-python
+RUN yum update -y & yum install -y wget python-devel
+RUN wget -P ~/ https://bootstrap.pypa.io/get-pip.py --no-check-certificate
+RUN python ~/get-pip.py
+RUN pip install jinja2 requests python-jenkins jenkinsapi bottle
+RUN pip install gevent
+RUN echo https://cdn.mysql.com/Downloads/Connector-Python/mysql-connector-python-2.1.3.tar.gz >> requirements.txt
+RUN pip install -r ./requirements.txt
+RUN yum install -y gcc gcc-c++
+RUN yum install -y glibc-static
+RUN pip install uwsgi
+RUN pip install dumb-init
 
 ADD ./uwsgi.yml /etc/uwsgi.yml
 ADD ./jenkins-sy /opt/jenkins-sy
 
-ENV JENKINS_ADDRESS http://127.0.0.1:9000
+ENV JENKINS_ADDRESS http://10.254.9.56:9000
 ENV JENKINS_USER admin
-ENV JENKINS_PASS admin
-ENV DB_HOST 127.0.0.1
-ENV DB_PORT 3366
+ENV JENKINS_PASS 123456
+ENV DB_HOST 10.254.9.56
+ENV DB_PORT 3306
 ENV DB_USER root
-ENV DB_PASS root
-ENV DB_fNAME jenkins
+ENV DB_PASS my-secret-pw
+ENV DB_NAME jenkins
 
 ENTRYPOINT ["dumb-init"]
-CMD ["/usr/sbin/uwsgi", "--yml", "/etc/uwsgi.yml"]
+CMD ["/usr/bin/uwsgi", "--yml", "/etc/uwsgi.yml"]
